another heroku test

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,6 @@
 
 
 
-		<!-- <input type="text"> <button class="login">login</button> -->
 		<h1>Missy Tee - clothing store</h1>
 		<div class="filter">
 			<h2>Filter</h2>
@@ -77,7 +76,6 @@
 		<div class="addGarment">
 
 			<div class="add button mt1">
-				<!-- <a href="" button type="">Add garmet</a> -->
 				<button @click="">Add Garment</button>
 			</div>
 
@@ -147,5 +145,5 @@
 	<script src="alpine.js"></script>
 
 </body>
-
+<!-- Ongezwa -->
 </html>
